# clab-template

./: .gitignore  Makefile  README.md
cmake-lib-dynamic-load-template/: README.md
cmake-lib-dynamic-load-template/src/: add.c
cmake-lib-dynamic-so-template/: README.md
cmake-lib-static-template/: CMakeLists.txt  Doxyfile  Makefile
cmake-lib-static-template/lib/add/: add.h
cmake-lib-static-template/src/: main.c
cmake-template/src/: main.c
imageload-template/: CMakeLists.txt  main.c
links/: README.md
multiplefile-template/: Doxyfile  Makefile  README.md
multiplefile-template/src/: add.c  add.h  main.c
singlefile-template/: Doxyfile  Makefile
src/: main.c
